--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "framer-motion": "^12.10.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
